--- a/aws1.html
+++ b/aws1.html
@@ -465,7 +465,7 @@
     <div class="signup-title">
       <img src="https://sepiasolutions.com/images/aws-banner-secondery-image.png" alt="AWS Banner" style="max-width:170px;vertical-align:middle;margin-bottom:5px;display:block;margin-left:auto;margin-right:auto;">
       AWS access sandbox 1 <br>
-      <span class="sandbox-time-black">(09:00 AM to 12:30 PM)</span>
+      <span class="sandbox-time-black"></span>
     </div>
     <form id="signupForm" autocomplete="off">
       <div class="input-row">
@@ -776,6 +776,4 @@
     }
   </script>
 </body>
-
 </html>
-
