--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- deploy test -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -125,7 +123,8 @@
         const timingSchedule = {
             'aws-1': '9:00 to 12:30',
             'aws-2': '12:45 to 4:15',
-            'aws-3': '4:30 to 8:00'
+            'aws-3': '4:30 to 7:00',
+            'azure': '10:30' // Added timing for Azure
         };
         
         const buttonNames = ['aws-1', 'aws-2', 'aws-3', 'azure'];
@@ -199,5 +198,4 @@
     </script>
 
 </body>
-
 </html>
