--- a/azure.html
+++ b/azure.html
@@ -535,7 +535,7 @@
     <div class="sandbox-row-group">
       <label for="sb-url" class="sb-label">Azure console:</label>
       <div class="sb-in-row">
-        <input id="sb-url" class="sb-inp" value="Not at updated by abinash" readonly>
+        <input id="sb-url" class="sb-inp" value="https://portal.azure.com/#@realhandsonlabs.com/resource/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-2e998674-playground-sandbox/overview" readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-url', this)">Copy</button>
       </div>
     </div>
@@ -547,14 +547,14 @@
     <div class="sandbox-row-group">
       <label for="sb-username" class="sb-label">Username:</label>
       <div class="sb-in-row">
-        <input id="sb-username" class="sb-inp" value="cloud_user" readonly>
+        <input id="sb-username" class="sb-inp" value="cloud_user_p_29431656@realhandsonlabs.com" readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-username', this)">Copy</button>
       </div>
     </div>
     <div class="sandbox-row-group" style="margin-bottom: 5px;">
       <label for="sb-password" class="sb-label">Password:</label>
       <div class="sb-in-row">
-        <input id="sb-password" class="sb-inp" value="Not at updated by abinash" readonly>
+        <input id="sb-password" class="sb-inp" value="yFb84VGR" readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-password', this)">Copy</button>
       </div>
     </div>
@@ -778,4 +778,5 @@
     }
   </script>
 </body>
+
 </html>
