--- a/aws1.html
+++ b/aws1.html
@@ -535,7 +535,7 @@
     <div class="sandbox-row-group">
       <label for="sb-url" class="sb-label">AWS Console:</label>
       <div class="sb-in-row">
-        <input id="sb-url" class="sb-inp" value="https://916863633408.signin.aws.amazon.com/console?region=us-east-1" readonly>
+        <input id="sb-url" class="sb-inp" value="season expired by abinash" readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-url', this)">Copy</button>
       </div>
     </div>
@@ -554,7 +554,7 @@
     <div class="sandbox-row-group" style="margin-bottom: 5px;">
       <label for="sb-password" class="sb-label">Password:</label>
       <div class="sb-in-row">
-        <input id="sb-password" class="sb-inp" value="xw01aL*ME@f=Eg[X82qQ" readonly>
+        <input id="sb-password" class="sb-inp" value="season expired by abinash" readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-password', this)">Copy</button>
       </div>
     </div>
@@ -778,3 +778,4 @@
 </body>
 
 </html>
+
