--- a/aws3.html
+++ b/aws3.html
@@ -535,7 +535,7 @@
     <div class="sandbox-row-group">
       <label for="sb-url" class="sb-label">AWS Console:</label>
       <div class="sb-in-row">
-        <input id="sb-url" class="sb-inp" value="Not at updated by abinash" readonly>
+        <input id="sb-url" class="sb-inp" value="https://352100722351.signin.aws.amazon.com/console?region=us-east-1" readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-url', this)">Copy</button>
       </div>
     </div>
@@ -554,7 +554,7 @@
     <div class="sandbox-row-group" style="margin-bottom: 5px;">
       <label for="sb-password" class="sb-label">Password:</label>
       <div class="sb-in-row">
-        <input id="sb-password" class="sb-inp" value="Not at updated by abinash" readonly>
+        <input id="sb-password" class="sb-inp" value="J5ypA1vOUwa(2@V}4&xR" readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-password', this)">Copy</button>
       </div>
     </div>
@@ -778,4 +778,5 @@
     }
   </script>
 </body>
+
 </html>
