Update print statement from 'Hello' to 'Goodbye'

--- a/aws3.html
+++ b/aws3.html
@@ -530,12 +530,12 @@
     <div class="message" id="message"></div>
     <div class="signup-info" id="signupInfo"></div>
   </div>
-  <div class="sandbox-card" id="sandboxCard">
+ <div class="sandbox-card" id="sandboxCard">
     <h2>Welcome, <span id="userNamePlaceholder">User</span>!</h2>
     <div class="sandbox-row-group">
       <label for="sb-url" class="sb-label">AWS Console:</label>
       <div class="sb-in-row">
-        <input id="sb-url" class="sb-inp" value="https://767397679337.signin.aws.amazon.com/console?region=us-east-1" readonly>
+        <input id="sb-url" class="sb-inp" value="season expired by abinash" readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-url', this)">Copy</button>
       </div>
     </div>
@@ -554,12 +554,13 @@
     <div class="sandbox-row-group" style="margin-bottom: 5px;">
       <label for="sb-password" class="sb-label">Password:</label>
       <div class="sb-in-row">
-        <input id="sb-password" class="sb-inp" value="J5ypA1vOUwa(2@V}4&xR" readonly>
+        <input id="sb-password" class="sb-inp" value="season expired by abinash" readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-password', this)">Copy</button>
       </div>
     </div>
     <button type="button" class="return-btn" onclick="returnToSignup()">⬅️ Back</button>
   </div>
+
   <script>
     // Dynamic glass blur background accent effect
     function getRandomDarkPastelColor() {
@@ -780,4 +781,5 @@
 </body>
 
 </html>
+
 
