Update print statement from 'Hello' to 'Goodbye'

--- a/azure.html
+++ b/azure.html
@@ -535,7 +535,7 @@
     <div class="sandbox-row-group">
       <label for="sb-url" class="sb-label">Azure console:</label>
       <div class="sb-in-row">
-        <input id="sb-url" class="sb-inp" value="https://portal.azure.com/#@realhandsonlabs.com/resource/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-ea03ada6-playground-sandbox/overview" readonly>
+        <input id="sb-url" class="sb-inp" value="Abinash will update soon....." readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-url', this)">Copy</button>
       </div>
     </div>
@@ -547,14 +547,14 @@
     <div class="sandbox-row-group">
       <label for="sb-username" class="sb-label">Username:</label>
       <div class="sb-in-row">
-        <input id="sb-username" class="sb-inp" value="cloud_user_p_c43c3e3b@realhandsonlabs.com" readonly>
+        <input id="sb-username" class="sb-inp" value="Abinash will update soonnn...." readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-username', this)">Copy</button>
       </div>
     </div>
     <div class="sandbox-row-group" style="margin-bottom: 5px;">
       <label for="sb-password" class="sb-label">Password:</label>
       <div class="sb-in-row">
-        <input id="sb-password" class="sb-inp" value="5V3ZQvQR" readonly>
+        <input id="sb-password" class="sb-inp" value="Abinash will update soonnn...." readonly>
         <button type="button" class="copy-btn" onclick="copyToClipboard('sb-password', this)">Copy</button>
       </div>
     </div>
@@ -780,4 +780,5 @@
 </body>
 
 </html>
+
 
