--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         const pathSchedule = {
             'aws-1': '/aws1.html',
             'aws-2': '/aws2.html',
-            'aws-3': '/aws3.html',
+            'aws-3': '/404.html',
             'azure': '/azure.html' // Base path defined here
         };
 
@@ -200,3 +200,4 @@
 </body>
 
 </html>
+
