--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         
         // Define paths for each button
         const pathSchedule = {
-            'aws-1': '/aws1.html',
+            'aws-1': '/404.html',
             'aws-2': '/aws2.html',
             'aws-3': '/404.html',
             'azure': '/azure.html' // Base path defined here
@@ -200,4 +200,5 @@
 </body>
 
 </html>
+
 
