--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
         
         // Define paths for each button
         const pathSchedule = {
-            'aws-1': '/404.html',
-            'aws-2': '/aws2.html',
+            'aws-1': '/aws1.html',
+            'aws-2': '/404.html',
             'aws-3': '/aws3.html',
-            'azure': '/azure.html' // Base path defined here
+            'azure': '/404.html' // Base path defined here
         };
 
         // Timing data for the labels
@@ -200,6 +200,7 @@
 </body>
 
 </html>
+
 
 
 
