--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         // Define paths for each button
         const pathSchedule = {
             'aws-1': '/aws1.html',
-            'aws-2': '/404.html',
+            'aws-2': '/aws2.html',
             'aws-3': '/aws3.html',
             'azure': '/404.html' // Base path defined here
         };
@@ -200,6 +200,7 @@
 </body>
 
 </html>
+
 
 
 
