--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             display: flex;
             flex-direction: row;
             gap: 30px;
-            background: rgba(255, 255, 255, 0.08);
+            background: #000;
             border-radius: 20px;
             padding: 30px 40px;
-            backdrop-filter: blur(10px);
+            /* Removed: backdrop-filter: blur(10px); */
             box-shadow: 0 0 25px rgba(0,0,0,0.5);
             z-index: 10;
         }
